cmake_minimum_required(VERSION 2.8)

project(mathutils CXX)

set(TARGET mathutils)
set(SOURCE_DIR ${CMAKE_CURRENT_SOURCE_DIR}/mathutils)

install(DIRECTORY ${SOURCE_DIR}/
        DESTINATION include/${TARGET}
        FILES_MATCHING PATTERN *.hpp)

set(CMAKE_CXX_FLAGS "")
set(CMAKE_CXX_FLAGS_DEBUG "-g")
set(CMAKE_CXX_FLAGS_RELEASE "-DNDEBUG -O2")

add_definitions(${CMAKE_CXX_FLAGS} "-std=c++14 -Wall")
